--- a/src/app/component/registration/registration.component.html
+++ b/src/app/component/registration/registration.component.html
@@ -1,1 +1,21 @@
-<p>registration works!</p>
+<div class="container">
+  <h1 class="title">User Registration</h1>
+  <form class="form">
+    <input type="email" name="email" class="input" placeholder="Email" />
+
+    <div class="password-group">
+      <input
+        type="password"
+        name="password"
+        class="input"
+        placeholder="Password"
+      />
+      <div class="bars">
+        <div></div>
+      </div>
+      <div class="strength">Medium</div>
+    </div>
+
+    <button class="button"><span>Sign Up</span></button>
+  </form>
+</div>
