update styles for task

--- a/src/app/component/registration/registration.component.html
+++ b/src/app/component/registration/registration.component.html
@@ -11,9 +11,11 @@
         placeholder="Password"
       />
       <div class="bars">
-        <div></div>
+        <div class="indicator"></div>
+        <div class="indicator"></div>
+        <div class="indicator"></div>
+        <div class="strength"></div>
       </div>
-      <div class="strength">Medium</div>
     </div>
 
     <button class="button"><span>Sign Up</span></button>
