--- a/src/app/component/registration/registration.component.scss
+++ b/src/app/component/registration/registration.component.scss
@@ -32,37 +32,38 @@
       flex-direction: column;
       gap: 0.75rem;
       .bars {
-        background-color: grey;
+        display: flex;
+        align-items: center;
+        gap: 0.3rem;
         width: 100%;
-        height: 6px;
-        border-radius: 1.5rem;
 
-        div {
-          width: 0%;
-          height: inherit;
-          border-radius: inherit;
-          transition: 0.4s;
+        .indicator {
+          width: 100%;
+          height: 6px;
+          border-radius: 1.5rem;
+          background-color: grey;
+          transition: 0.8s;
         }
 
-        &.easy div {
+        .strength {
+          font-size: 0.85rem;
+        }
+
+        &.red .indicator {
           background-color: red;
-          width: 33.33%;
         }
-        &.medium div {
+
+        &.easy .indicator:first-child {
+          background-color: red;
+        }
+
+        &.medium .indicator:nth-child(-n + 2) {
           background-color: yellow;
-          width: 66.66%;
         }
-        &.strong div {
+
+        &.strong .indicator {
           background-color: green;
-          width: 100%;
         }
-        &.red div {
-          background-color: red;
-          width: 100%;
-        }
-      }
-      .strength {
-        padding-left: 0.5rem;
       }
     }
 
